# ftr

./: .gitignore  AGENTS.md  ASYNC_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FREEBSD_PLAN.md  FREEBSD_PLAN_CRITIQUE.md  LICENSE  MACOS_BUILD_VERIFICATION.md  PR_BODY_v0.5.1.md  PR_DESCRIPTION.md  README.md  REFACTOR_PLAN_v0.2.0.md  REFACTOR_PLAN_v0.2.1.md  RELEASE_CHECKLIST.md  RELEASE_CHECKLIST_v0.6.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.6.0.md  RELEASE_v0.6.0_SUMMARY.md  TESTING_QUICK_WINS.md  TEST_COVERAGE_PLAN.md  TEST_ISSUES.md  TODO.md  Vagrantfile  WINDOWS_PLAN.md  build.rs  codecov.yml  deny.toml  run-tests.ps1
.claude/: settings.local.json
.claude/agents/: product-engineering-architect.md
.githooks/: README.md  check-compliance.sh  check-file-size.sh  install-hooks.sh  install-tools.sh  pre-commit  pre-push  release-checklist.sh
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  debug-test.yml  publish-apt-repo.yml  release.yml  test-arm64-build.yml  test-freebsd.yml  validate-release.yml
benches/: traceroute_bench.rs
dew-packer/: dew-test.pkr.hcl
dew-packer/http/: user-data
docs/: API_ERGONOMICS_CRITIQUE.md  API_ERGONOMICS_PLAN.md  API_IMPROVEMENTS_RESPONSE.md  CNAME  HANDLE_PATTERN_REFACTOR.md  HANDLE_REFACTOR_IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN.md  IPV6_DESIGN.md  IXP_DETECTION_PROPOSAL.md  LIBRARY_USAGE.md  LIBRARY_USAGE_V5.md  MIGRATION_V0.6.md  MIGRATION_V5.md  MODERNIZATION_PLAN.md  MULTI_MODE.md  RELEASE_CHECKLIST.md  RELEASE_PROCESS.md  RUST_BEST_PRACTICES.md  TIMING_CONFIGURATION.md  UDP_TRACEROUTE_LINUX.md  VM_TESTING.md  WHOIS_ENHANCEMENT_PROPOSAL.md  WINDOWS_ASYNC_FINDINGS.md  _config.yml  apt-repository-setup.md  index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
examples/: cached_traces.rs  custom_socket.rs  error_handling.rs  json_output.rs  parallel_traces.rs  rigorous_test.rs  service_api.rs  simple_trace.rs  spike_asn6.rs  spike_icmpv6_socket.rs  spike_linux_v6.rs  spike_stun6.rs  spike_traceroute6.rs  spike_windows_v6.rs  test_socket.rs  test_v0_6_library.rs
scripts/: README.md  create-ubuntu-from-iso.sh  create-ubuntu-vm.sh  download-isos.sh  install-vagrant.sh  parallels-ubuntu-setup.sh  quick_test.sh  setup-parallels-vms.sh  setup-utm-vms.sh  ssh-to-vm.sh  test-cross-platform.sh  test-freebsd-root.sh  test-freebsd.sh  test-ubuntu.sh  test-windows.ps1  test-windows.sh  test_traceroute.sh  vagrant-quick-start.md
scripts/autoinstall/: user-data
scripts/cloud-init/: meta-data  user-data
scripts/utm-configs/: freebsd-config.json  ubuntu-config.json  windows-config.json
src/: caches.rs  lib.rs  main.rs  main2.rs  main_tests.rs  main_v6_tests.rs  probe.rs  services.rs  test_hooks.rs  traceroute.rs
src/asn/: cache.rs  lookup.rs  lookup_tests.rs  mod.rs  service.rs
src/config/: mod.rs  timing.rs
src/dns/: cache.rs  mod.rs  resolver.rs  reverse.rs  service.rs  system.rs  test_utils.rs
src/enrichment/: async_service.rs  mod.rs  service.rs
src/public_ip/: mod.rs  providers.rs  service.rs  stun.rs  stun_cache.rs
src/socket/: async_factory.rs  async_trait.rs  bsd.rs  bsd_async.rs  bsd_v6.rs  factory.rs  icmp.rs  icmp_v4.rs  icmpv6.rs  linux.rs  linux_async.rs  linux_v6.rs  macos.rs  macos_async.rs  macos_v6.rs  mod.rs  traits.rs  udp.rs  utils.rs  windows.rs  windows_async.rs  windows_async_tokio.rs  windows_iocp.rs  windows_v6.rs
src/tests/: mod.rs
src/traceroute/: api.rs  async_api.rs  async_engine.rs  caching_test.rs  config.rs  engine.rs  engine_test.rs  engine_tests.rs  error.rs  fully_parallel_async_engine.rs  isp_from_path.rs  parallel_engine.rs  result.rs  sandwich_test.rs  segment_classification_test.rs  types.rs
test_outputs/: 8.8.8.8_icmp_q1_ftr.txt  8.8.8.8_icmp_q1_sys.txt
tests/: async_multi_hop.rs  cache_performance_test.rs  caching_verification_test.rs  ci_filter_test.rs  cli_integration.rs  edge_cases.rs  error_handling_test.rs  event_overhead_test.rs  freebsd_integration.rs  freebsd_smoke.rs  handle_pattern_api_test.rs  handle_pattern_test.rs  integration_test.rs  ipv6_enrichment_test.rs  ipv6_integration.rs  linux_async_udp_debug.rs  parallel_isolation_test.rs  performance_test.rs  quick_perf_test.rs  service_api_integration_test.rs  test_ci_network.rs  traceroute_integration.rs  v6_features_test.rs  windows_integration.rs
vagrant/: .gitignore  README.md
vagrant/boxes/: .gitignore
vagrant/freebsd-14/: Vagrantfile
vagrant/lib/: base_config.rb  rust_installer.rb
vagrant/openbsd-7.5/: Vagrantfile
vagrant/ubuntu-22.04/: Vagrantfile
vagrant/ubuntu-24.04/: Vagrantfile
