[package]
name = "ftr"
version = "0.1.0"
edition = "2021"
authors = ["David Weekly <dweekly@gmail.com>"]
description = "A fast, parallel ICMP traceroute implementation with ASN lookup"
license = "MIT"
repository = "https://github.com/dweekly/ftr"
homepage = "https://github.com/dweekly/ftr"
readme = "README.md"
keywords = ["traceroute", "icmp", "networking", "asn", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"  # Optimize for size

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "time", "net", "macros"] }
socket2 = "0.5"
pnet = "0.34"
anyhow = "1.0"
futures = "0.3"
ipnet = "2.9"
clap = { version = "4.4.8", features = ["derive"] }
hickory-resolver = { version = "0.25", features = ["tokio"] } 