[package]
name = "ftr"
version = "0.3.1"
edition = "2021"
authors = ["David Weekly <david@weekly.org>"]
description = "A fast, parallel ICMP traceroute with ASN lookup, reverse DNS, and ISP detection"
license = "MIT"
repository = "https://github.com/dweekly/ftr"
homepage = "https://github.com/dweekly/ftr"
readme = "README.md"
keywords = ["traceroute", "icmp", "networking", "asn", "diagnostics"]
categories = ["command-line-utilities", "network-programming"]
rust-version = "1.82.0"

[features]
default = []
async = ["tokio/full"]

[lib]
name = "ftr"
path = "src/lib.rs"

[[bin]]
name = "ftr"
path = "src/main.rs"

[[bench]]
name = "traceroute_bench"
harness = false


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"  # Optimize for size

[dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "time", "net", "macros", "sync", "io-util"] }
socket2 = { version = "0.6", features = ["all"] }
pnet = "0.35"
anyhow = "1.0"
futures = "0.3"
ipnet = "2.9"
clap = { version = "4.5", features = ["derive"] }
hickory-resolver = { version = "0.25", features = ["tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
once_cell = "1.19"
lazy_static = "1.5"
async-trait = "0.1"
tokio-util = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
# Enable vendored OpenSSL for static linking on Linux
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "native-tls-vendored"] }

[target.'cfg(target_os = "freebsd")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "openbsd")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = ["Win32_NetworkManagement_IpHelper", "Win32_Networking_WinSock", "Win32_Foundation", "Win32_System_IO", "Win32_System_Threading", "Win32_Security"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
serde_json = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(target_os = "freebsd")'.dev-dependencies]
libc = "0.2"

[lints.clippy]
# Deny correctness issues (lower priority so specific lints can override)
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }

# Warn on performance issues
perf = { level = "warn", priority = -1 }

# Warn on style issues (with exceptions)
style = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

# Warn on selected pedantic lints
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
inefficient_to_string = "warn"

# Warn on unwrap/expect/panic in code
unwrap_used = "warn"
expect_used = "allow"  # We use expect() for mutex locks which is acceptable
panic = "warn"

[lints.rust]
# Require documentation for public items
missing_docs = "warn"

[package.metadata.deb]
section = "net"
priority = "optional"
depends = "$auto"
maintainer = "David Weekly <david@weekly.org>"
copyright = "2025, David Weekly <david@weekly.org>"
license-file = ["LICENSE", "4"]
extended-description = """\
ftr (Fast TraceRoute) is a high-performance, parallel ICMP traceroute \
implementation written in Rust. It features concurrent probing for faster \
route discovery, automatic ASN (Autonomous System Number) lookups to identify \
network operators, and intelligent hop classification (e.g., local networks, \
IXPs, CDNs)."""
assets = [
    ["target/release/ftr", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/ftr/README", "644"],
    ["CHANGELOG.md", "usr/share/doc/ftr/CHANGELOG", "644"],
] 